Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectTextField.quorum
class Main
    text v = "text"
    action Main
        Test(v)
    end

    action Test(Object var)
        if var:GetValue() = "text"
            output "passed"
        end
    end
end
