Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(text var)
    end
end
